# nuanu-parking-ai

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
_bmad-output/implementation-artifacts/: 1-1-project-scaffold-and-docker-compose-foundation.md  1-2-zone-configuration-schema-and-loading.md  1-3-frigate-nvr-setup-and-zone-masking.md  1-4-counter-service-vehicle-detection-pipeline.md  1-5-zone-state-machine-with-debounce-and-mqtt-publishing.md  1-6-rtsp-stream-resilience-and-graceful-degradation.md  sprint-status.yaml
_bmad-output/planning-artifacts/: architecture.md  epics.md  implementation-readiness-report-2026-04-09.md  prd-validation-report.md  prd.md  product-brief-nuanu-parking-ai-distillate.md  product-brief-nuanu-parking-ai.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml
_bmad/bmb/: config.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
config/: zones.yaml
config/frigate/: config.yml
config/mosquitto/: mosquitto.conf
config/nginx/: nginx.conf
services/counter/: Dockerfile  pyproject.toml
services/counter/src/counter/: __init__.py  main.py
services/dashboard/: Dockerfile  pyproject.toml
services/dashboard/src/dashboard/: __init__.py  main.py
services/watchdog/: Dockerfile  pyproject.toml
services/watchdog/src/watchdog/: __init__.py  main.py
shared/: pyproject.toml
shared/src/shared/: __init__.py  config.py  models.py  mqtt.py
shared/src/shared/db/: __init__.py  schema.sql
