[project]
name = "shared"
version = "0.1.0"
description = "Shared models, MQTT helpers, and config for nuanu-parking-ai"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiomqtt>=2.0",
    "aiosqlite>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shared"]
