[project]
name = "counter"
version = "0.1.0"
description = "Vehicle detection service: motion-gated YOLOv8 inference and zone state machine"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "ultralytics>=8.0",
    "aiomqtt>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/counter"]

[tool.uv.sources]
shared = { workspace = true }
