[project]
name = "dashboard"
version = "0.1.0"
description = "Web dashboard: FastAPI + HTMX + SSE for live parking occupancy monitoring"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
    "itsdangerous>=2.2",
    "aiosqlite>=0.21",
    "aiomqtt>=2.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard"]

[tool.uv.sources]
shared = { workspace = true }
