[project]
name = "watchdog"
version = "0.1.0"
description = "Health monitoring service: heartbeat tracking, Telegram alerts, container health"
requires-python = ">=3.12"
dependencies = [
    "shared",
    "python-telegram-bot>=22.0",
    "aiomqtt>=2.0",
    "pydantic-settings>=2.0",
    "docker>=7.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/watchdog"]

[tool.uv.sources]
shared = { workspace = true }
